@@ -1,5 +1,9 @@
 2004-02-08  Joseph S. Myers  <jsm@polyomino.org.uk>
 
+	* tests/factor.8675309, tests/factor.6172538568: New tests (from
+	NetBSD src/regress).
+	* tests/factor.test: Update.
+
 	* boggle/README.linux, dm/README.linux, fortune/README.linux,
 	hunt/README.linux, trek/README.linux: Remove.
 	* README: Move information from those files to here.
